syntax="proto3";

option java_package="com.pccc.touda.grpc.test";
option java_multiple_files=true;

import "serverStreamRequest.proto";
import "serverStreamResponse.proto";

service HelloDoubleStreamService {
    rpc getBooksBySizes(stream HelloServerStreamRequest) returns (stream HelloServerStreamResponse) {};
}